--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/product/view/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/product/view/list.phtml
@@ -1,15 +1,7 @@
 <?php
 
-/**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- */
-
 use Hyva\Theme\Model\ViewModelRegistry;
-use Hyva\Theme\ViewModel\HeroiconsOutline;
-use Hyva\Theme\ViewModel\HeroiconsSolid;
+use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Framework\View\Helper\SecureHtmlRenderer;
 use Magento\Framework\Escaper;
 use Magento\Review\Block\Product\View as ProductReview;
@@ -23,11 +15,9 @@ use Magento\Theme\Block\Html\Pager;
 /** @var Pager $toolbar */
 /** @var ViewModelRegistry $viewModels */
 
-/** @var HeroiconsOutline $heroicons */
-$heroicons = $viewModels->require(HeroiconsOutline::class);
+/** @var SvgIcons $hyvaicons */
+$hyvaicons = $viewModels->require(SvgIcons::class);
 
-/** @var HeroiconsSolid $heroiconsSolid */
-$heroiconsSolid = $viewModels->require(HeroiconsSolid::class);
 
 $reviewCollection = $block->getReviewsCollection();
 
@@ -46,25 +36,27 @@ $productName = $block->getProduct()->getName();
 ?>
 <?php if (count($items)): ?>
     <div
-        class="mx-auto px-5 md:p-0 content-wrapper"
-        id="customer-review-list"
-        aria-label="<?= $escaper->escapeHtmlAttr(__('Customer Reviews')) ?>"
-        tabindex="-1"
-        role="group"
+            class="mx-auto px-5 md:p-0 content-wrapper"
+            id="customer-review-list"
+            aria-label="<?= $escaper->escapeHtmlAttr(__('Customer Reviews')) ?>"
+            tabindex="-1"
+            role="group"
     >
         <div class="flex mb-6 md:flex-row">
             <?php if (!$block->getHideTitle()): ?>
-            <<?= /* @noEscape */ $headingTag ?> class="text-gray-900 text-lg title-font font-base text-center md:text-left w-full">
+            <<?= /* @noEscape */
+            $headingTag ?>
             <?= $escaper->escapeHtml(__('Customer Reviews')) ?>
-        </<?= /* @noEscape */ $headingTag ?>>
+        </<?= /* @noEscape */
+        $headingTag ?>>
         <?php endif ?>
     </div>
-    <div class="card w-full">
+    <div class="w-full">
         <?php foreach ($items as $review): ?>
             <div itemscope itemprop="review" itemtype="http://schema.org/Review"
-                 class="border-b pb-4 my-4 border-container last:border-0 last:mb-0">
+                 class="border-b pb-4 my-4 border-container last:border-0 last:mb-0 mb-5 p-5 rounded-xl bg-bg-400">
                 <?php if (count($review->getRatingVotes())): ?>
-                    <div class="table">
+                    <div>
                         <?php foreach ($review->getRatingVotes() as $vote): ?>
                             <?php
                             $rating = $vote->getPercent();
@@ -72,44 +64,18 @@ $productName = $block->getProduct()->getName();
                             $starsFilled = is_numeric($rating) ? floor($rating / 100 * $ratingSteps) : 0;
                             $starsEmpty = floor($ratingSteps - $starsFilled);
                             ?>
-                            <div class="flex items-center" itemprop="reviewRating" itemscope itemtype="http://schema.org/Rating">
-                                <div class="table-cell pr-6 align-middle text-left">
-                                    <?= $escaper->escapeHtml($vote->getRatingCode()) ?>
-                                </div>
-                                <span class="hidden" itemprop="ratingValue"><?= /** @noEscape */ $starsFilled; ?></span>
-                                <div
-                                    class="flex flex-row"
-                                    role="img"
-                                    aria-label="<?= $escaper->escapeHtmlAttr(__('%1 rating. %2 out of %3 stars', $productName, $starsFilled, $ratingSteps))?>"
-                                >
-                                    <?php $i = 0; ?>
-                                    <?php while ($i < $starsFilled): ?>
-                                        <?= $heroiconsSolid->starHtml('text-yellow-400', 24, 24, ["aria-hidden" => "true"]); ?>
-                                        <?php $i++; ?>
-                                    <?php endwhile; ?>
-                                    <?php $i = 0; ?>
-                                    <?php while ($i < $starsEmpty): ?>
-                                        <?= $heroiconsSolid->starHtml('text-gray-400', 24, 24, ["aria-hidden" => "true"]); ?>
-                                        <?php $i++; ?>
-                                    <?php endwhile; ?>
-                                </div>
+                            <div class="mb-1 md:text-lg">
+                                <span><?= $escaper->escapeHtml(__('Review by')) ?></span>
+                                <strong itemprop="author" itemscope itemtype="https://schema.org/Person">
+                                    <span itemprop="name"><?= $escaper->escapeHtml($review->getNickname()) ?></span>
+                                </strong>
                             </div>
-                        <?php endforeach; ?>
-                    </div>
-                <?php endif; ?>
-                <div class="text-lg my-2" itemprop="name">
-                    <?= $escaper->escapeHtml($review->getTitle()) ?>
-                </div>
-                <div>
-                    <span><?= $escaper->escapeHtml(__('Review by')) ?></span>
-                    <strong itemprop="author" itemscope itemtype="https://schema.org/Person">
-                        <span itemprop="name"><?= $escaper->escapeHtml($review->getNickname()) ?></span>
-                    </strong>
-                    <time
-                        class="text-gray-700 inline-block ml-2"
-                        itemprop="datePublished"
-                        datetime="<?= $escaper->escapeHtmlAttr($block->formatDate($review->getCreatedAt(), $format)); ?>"
-                    >
+                            <div class="mb-3 text-primary-700">
+                                <span>Created at</span>
+                                <time
+                                        itemprop="datePublished"
+                                        datetime="<?= $escaper->escapeHtmlAttr($block->formatDate($review->getCreatedAt(), $format)); ?>"
+                                >
                                 <span class="sr-only">
                                     <?= $escaper->escapeHtml(
                                         $block->formatDate(
@@ -118,15 +84,48 @@ $productName = $block->getProduct()->getName();
                                         )
                                     ) ?>
                                 </span>
-                        <span aria-hidden="true">
+                                    <span aria-hidden="true">
                                     <?= $escaper->escapeHtml(
                                         $block->formatDate($review->getCreatedAt(), $format)
                                     ) ?>
                                 </span>
-                    </time>
-                </div>
-                <div class="mt-2" itemprop="description">
-                    <?= /* @noEscape */ nl2br($escaper->escapeHtml($review->getDetail())) ?>
+                                </time>
+                            </div>
+                            <div class="flex items-center mb-3" itemprop="reviewRating" itemscope
+                                 itemtype="http://schema.org/Rating">
+                                <span class="hidden" itemprop="ratingValue"><?= /** @noEscape */
+                                    $starsFilled; ?></span>
+                                <div class="flex gap-4">
+                                    <div class="flex gap-4 items-center">
+                                        <div class="flex">
+                                            <?php $i = 0; ?>
+                                            <?php while ($i < $starsFilled): ?>
+                                                <?= $hyvaicons->renderHtml('star', 'text-xl text-primary-500') ?>
+                                                <?php $i++; ?>
+                                            <?php endwhile; ?>
+                                            <?php $i = 0; ?>
+                                            <?php while ($i < $starsEmpty): ?>
+                                                <?= $hyvaicons->renderHtml('star', 'text-xl text-secondary-400') ?>
+                                                <?php $i++; ?>
+                                            <?php endwhile; ?>
+                                        </div>
+                                        <div>
+                                            <p class="text-primary-600"><?= $starsFilled ?>.0</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        <?php endforeach; ?>
+                    </div>
+                <?php endif; ?>
+                <div>
+                    <div class="font-bold md:text-lg mb-3" itemprop="name">
+                        <?= $escaper->escapeHtml($review->getTitle()) ?>
+                    </div>
+                    <div class="mt-2" itemprop="description">
+                        <?= /* @noEscape */
+                        nl2br($escaper->escapeHtml($review->getDetail())) ?>
+                    </div>
                 </div>
             </div>
         <?php endforeach; ?>
