--- a/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/button.phtml
@@ -12,7 +12,8 @@ use Magento\Framework\Escaper;
     <a href="<?= $escaper->escapeUrl($block->getPrintUrl()) ?>"
        target="_blank"
        rel="noopener"
-       class="button btn--size-md button--ghost-primary w-full cursor-pointer text-center md:w-auto"
+       class="button button--filled-primary"
+       x-element-transition-trigger
     >
         <?= $escaper->escapeHtml(__('Print receipt')) ?>
     </a>
